@@ -1,2 +1,13 @@
 # estate-management-system
 It's a project I developed to reinforce the structures on C# that I learned in a programming course at the university. I used SHA-256 encryption algorithm for Login and Register operations; I preferred MSSQL as database; I also used Visual Studio 2017 as the IDE.
+
+
+Structures required for installation and execute;
+
+Eclipse IDE
+Java SE 17
+MySQL Connector 8.0.29
+JavaFX SDK 18.0.1
+For Database: AMPPS
+Run Configuration - Arguments: --module-path "C:\Users\furkan\jdk\javafx-sdk-18.0.1\lib" --add-modules javafx.controls,javafx.fxml
+After //--module-path you need to point the path of lib folder of sdk 18.0.1.
